# designGuardDesktopApp

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/agents/: ai-engineer.md  backend-architect.md  devops-automator.md  engineering-lead.md  frontend-developer.md
.github/workflows/: designguard.yml  release.yml
designguard/: CHANGELOG.md  Cargo.toml  README.md
designguard-cli/: Cargo.toml  README.md
designguard-cli/src/: main.rs
designguard-cli/tests/: cli_tests.rs
designguard/benches/: validation_bench.rs
designguard/datasheets/: ams1117-3.3.json  atmega328p.json
designguard/examples/: custom_rules.rs  simple_validation.rs  test.kicad_sch
designguard/src/: core.rs  lib.rs
designguard/src/ai/: claude.rs  mod.rs  ollama.rs  prompts.rs  provider.rs  router.rs
designguard/src/analyzer/: capacitor_classifier.rs  capacitor_classifier_tests.rs  decoupling_groups.rs  drs.rs  mod.rs
designguard/src/compliance/: emi.rs  ipc2221.rs  mod.rs  rules.rs
designguard/src/datasheets/: builtin.rs  checker.rs  matcher.rs
designguard/src/parser/: format_detector.rs  kicad.rs  kicad_legacy.rs  netlist.rs  pcb.rs  pcb_schema.rs  sexp.rs
designguard/src/ucs/adapters/: kicad.rs  mod.rs
designguard/tests/: integration_tests.rs  parser_tests.rs  validation_tests.rs
designguard/tests/fixtures/: missing_decap.kicad_sch  missing_i2c_pullups.kicad_sch  valid_design.kicad_sch
scripts/: pre-commit.example
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  sample-rules.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/datasheets/: ch340g.json  cp2102.json  esp32-wroom-32.json  lm1117-3.3.json  lm7805.json  ne555.json  rp2040.json  stm32f411.json
src-tauri/icons/: DesignGuard.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/ai/: classifier.rs  claude.rs
src-tauri/src/analyzer/: capacitor_classifier.rs  capacitor_classifier_tests.rs  decoupling_groups.rs  drs.rs  explanations.rs  rules.rs
src-tauri/src/compliance/: emi.rs  net_classifier.rs  power_net_registry.rs  rules.rs
src-tauri/src/datasheets/: checker.rs  mod.rs  schema.rs
src-tauri/src/parser/: format_detector.rs  kicad.rs  mod.rs  netlist.rs  pcb.rs  schema.rs  sexp.rs
src-tauri/src/ucs/: analysis.rs  circuit.rs  mod.rs  schema.rs
src-tauri/test-fixtures/invalid/: corrupt.kicad_sch
src-tauri/test-fixtures/with-issues/: complete-design.kicad_sch  issues.kicad_sch
src-tauri/tests/: ai_tests.rs  drs_tests.rs  integration_tests.rs  legacy_format_tests.rs  parser_tests.rs  rules_tests.rs
src/components/: AIAnalysisPanel.tsx  AISettings.tsx  AnalyticsConsent.tsx  ChatMessage.tsx  ChatPanel.tsx  CircuitAnalysisPanel.tsx  ComponentClassificationPanel.tsx  DRSPanel.tsx  IssueDetail.tsx  IssueItem.tsx  IssuePanel.tsx  PCBCompliancePanel.tsx  ProjectControls.tsx  ProjectInfo.tsx  SettingsDialog.tsx  index.ts
src/hooks/: useTheme.ts
src/lib/: analytics.ts  api.ts  store.ts
src/types/: index.ts
test-generation/: generate_edge_cases.py
test-generation/edge-cases/: case_01_deeply_nested_hierarchical_sheets.kicad_sch  case_02_missing_timestamps.kicad_sch  case_03_custom_footprints_special_chars.kicad_sch  case_04_empty_property_values.kicad_sch  case_05_extreme_coordinate_values.kicad_sch  case_06_malformed_uuids.kicad_sch  case_07_unicode_in_values.kicad_sch  (+13 more)
(+28 files in other folders)
