[package]
name = "designguard-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for KiCad schematic and PCB validation (DesignGuard)"
authors = ["DesignGuard Contributors"]
license = "MIT"
repository = "https://github.com/ltwmori/designGuardDesktopApp"

[dependencies]
designguard = { version = "0.1", path = "../designguard" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
