[package]
name = "designguard-gui"
version = "0.1.0"
description = "DesignGuard - Desktop application for schematic design analysis"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "designguard_gui"
path = "src/lib.rs"

[[bin]]
name = "designguard-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
designguard = { path = "../designguard" }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
notify = "6.0"
notify-debouncer-mini = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
petgraph = { version = "0.6", features = ["serde-1"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
